# pytorch-code

./: README.md
dive-into-deep-learning/: README.md  pyproject.toml
dive-into-deep-learning/notebooks/: accelerate.py  alexnet.ipynb  datasets.py  evaluate.py  googlenet.ipynb  lenet.ipynb  linear-regression.ipynb  mlp.ipynb  nin.ipynb  resnet.ipynb  softmax-regression.ipynb  trainer.py  utils.py  vgg.ipynb  visualize.py
dive-into-deep-learning/utils/: accumulator.py  animator.py  plt_utils.py
